--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -1,4 +1,4 @@
-name: Spring Boot CI/CD to AWS EC2
+name: Spring Boot CI/CD to AWS EC2 (AMD64)
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2. Set up Java (JDK 17)
+      # 2. Set up Java 17
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -22,24 +22,29 @@ jobs:
           java-version: '17'
 
       # 3. Build Spring Boot JAR
-      - name: Build with Maven
+      - name: Build JAR with Maven
         run: mvn clean package -DskipTests
 
-      # 4. Login to Docker Hub
+      # 4. Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      # 5. Login to Docker Hub
       - name: Login to Docker Hub
-        run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login \
-          -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 5. Build Docker image
-      - name: Build Docker image
-        run: |
-          docker build -t chittiraja/springboot-aws-docker:latest .
-
-      # 6. Push Docker image
-      - name: Push Docker image
-        run: |
-          docker push chittiraja/springboot-aws-docker:latest
+      # 6. Build & Push Docker image (linux/amd64)
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: chittiraja/springboot-aws-docker:latest
+          platforms: linux/amd64
 
       # 7. Deploy to AWS EC2
       - name: Deploy to EC2 via SSH
