--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -1,4 +1,4 @@
-name: Spring Boot CI/CD to AWS EC2 (AMD64)
+name: Spring Boot CI/CD to AWS EC2 (Java 21)
 
 on:
   push:
@@ -14,12 +14,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2. Set up Java 17
-      - name: Set up JDK 17
+      # 2. Set up Java 21 (REQUIRED for Spring Boot 4.x)
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: '17'
+          java-version: '21'
 
       # 3. Build Spring Boot JAR
       - name: Build JAR with Maven
