--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -3,7 +3,7 @@ name: Spring Boot CI/CD to AWS EC2 (Java 21)
 on:
   push:
     branches:
-      - master
+      - master   # keep as-is if your repo uses master
 
 jobs:
   build-and-deploy:
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2. Set up Java 21 (required for Spring Boot 4.x)
+      # 2. Set up Java 21
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
@@ -36,7 +36,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 6. Build & Push Docker image (linux/amd64)
+      # 6. Build & Push Docker image
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
@@ -52,15 +52,13 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
 
-      # 8. Deploy to AWS EC2
-      - name: Deploy to EC2
+      # 8. Deploy to AWS EC2 using Docker Compose ✅
+      - name: Deploy to EC2 with Docker Compose
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@52.207.11.151 << 'EOF'
+            cd /home/ubuntu
             docker pull chittiraja/springboot-aws-docker:latest
-            docker stop springboot-backend || true
-            docker rm springboot-backend || true
-            docker run -d \
-              --name springboot-backend \
-              -p 8080:8080 \
-              chittiraja/springboot-aws-docker:latest
+            docker pull chittiraja/frontend-uat:latest
+            docker compose down
+            docker compose up -d
           EOF
